Fix drag'n'drop from real URLs